# Tomato

./: .gitignore  README.md  environment.yml  test_launch.bash  todo.txt  train_launch.bash
best_model/: best_model.pth
best_model/stats/test/: events.out.tfevents.1756152420.wn45.43481.0
best_model/stats/train/: events.out.tfevents.1755965746.wn45.2182.0
images_to_pcl_converter/.svn/: wc.db
images_to_pcl_converter/launch/: images_to_pcl.launch.py
images_to_pcl_converter/src/: images_to_pcl_converter.cpp
romiseg/: pipe_benchmark.py  pyproject.toml  test_reconstruction.py
romiseg/conda/env/: romiseg.yaml
romiseg/conda/recipe/: conda_build_config.yaml  meta.yaml
romiseg/docs/assets/css/: extra.css
romiseg/src/romiseg/: __init__.py  evaluate.py  finetune.py  parameters_train.toml  segmentation_2d.py  train_cnn.py
romiseg/src/romiseg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
romiseg/src/romiseg/utils/: __init__.py  active_contour.py  generate_3D_ground_truth.py  generate_volume.py  proj_point_cloud.py  segmentation_model.py  to_del.py  train_3D.py  train_from_dataset.py  vox_to_coord.py
src/: arg_parser.py  dataset.py  metrics.py  model.py  params.py  test.py  test_nel_senso_test.py  train.py
